--- a/resources/scss/ceres/views/Home/_home.scss
+++ b/resources/scss/ceres/views/Home/_home.scss
@@ -283,9 +283,7 @@
 }
 
 // FIX iOS 11.0.0 - 11.X bug https://bugs.webkit.org/show_bug.cgi?id=176896
-@include media-breakpoint-down(sm){
-	body.modal-open {
-		position: fixed;
-		width: 100%;
-	}
+.ios body.modal-open {
+	position: fixed;
+	width: 100%;
 }
