--- a/resources/views/Customer/Components/Contact/ContactForm.twig
+++ b/resources/views/Customer/Components/Contact/ContactForm.twig
@@ -46,8 +46,9 @@
 						</div>
 						<div class="col-xs-12 col-md-6 m-b-1">
 							<div class="input-unit input-mail-field" data-validate="regex" data-model="userMail">
-								<input type="email" name="email" v-model="userMail" id="txt_email" data-validate-ref="{{ mailRegex }}">
-								<label for="txt_email">{{ trans("Ceres::Template.contactMail") }}*</label>
+								{% set uid_mail = uid() %}
+								<input type="email" name="email" v-model="userMail" id="{{ uid_mail }}" data-validate-ref="{{ mailRegex }}">
+								<label for="{{ uid_mail }}">{{ trans("Ceres::Template.contactMail") }}*</label>
 							</div>
 							<div class="error-feedback">{{ trans("Ceres::Template.contactEnterConfirmEmail") }}</div>
 						</div>
