--- a/resources/views/Customer/Components/GuestLogin.twig
+++ b/resources/views/Customer/Components/GuestLogin.twig
@@ -4,8 +4,9 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="input-unit" data-validate="mail">
-                        <input type="email" name="email" id="txt_email" v-model="email">
-                        <label for="txt_email">{{ trans("Ceres::Template.accEmail") }}*</label>
+                        {% set uid_mail = uid() %}
+                        <input type="email" name="email" id="{{ uid_mail }}" v-model="email">
+                        <label for="{{ uid_mail }}">{{ trans("Ceres::Template.accEmail") }}*</label>
                     </div>
                 </div>
 
