--- a/resources/views/Customer/Components/Registration.twig
+++ b/resources/views/Customer/Components/Registration.twig
@@ -5,15 +5,17 @@
             <div class="row" :id="'registration' + _uid">
                 <div class="col-sm-12">
                     <div class="input-unit" data-validate="mail">
-                        <input type="text" name="email" id="txt_email" v-model="username">
-                        <label for="txt_email">{{ trans("Ceres::Template.accEmail") }}*</label>
+                        {% set uid_mail = uid() %}
+                        <input type="text" name="email" id="{{ uid_mail }}" v-model="username">
+                        <label for="{{ uid_mail }}">{{ trans("Ceres::Template.accEmail") }}*</label>
                     </div>
                 </div>
 
                 <div class="col-sm-6" v-if="!guestMode">
-                    <div class="input-unit" :class="{'no-bottom media-xs-d': modalElement}" id="passwordBox" data-validate="password" ref="passwordInput">
+                    <div class="input-unit" :class="{'no-bottom media-xs-d': modalElement}" data-validate="password" ref="passwordInput">
                         <popper v-cloak trigger="focus" placement="bottom" ref="passwordHint">
-                            <input slot="handle" type="password" name="password" id="registration_password_input" v-model="password">
+                            {% set uid_pwd = uid() %}
+                            <input slot="handle" type="password" name="password" id="{{ uid_pwd }}" v-model="password">
                             <div slot="title">
                                 {{ trans("Ceres::Template.accPasswordHintTitle") }}
                             </div>
@@ -24,14 +26,15 @@
                             </ul>
                         </popper>
 
-                        <label for="txt_pw">{{ trans("Ceres::Template.accPassword") }}*</label>
+                        <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.accPassword") }}*</label>
                     </div>
                 </div>
 
                 <div class="col-sm-6 input-unit-group" v-if="!guestMode">
-                    <div class="input-unit" :class="{'no-bottom': modalElement}" id="passwordRepeatBox" data-validate="ref">
-                        <input type="password" name="password-repeat" id="txt_pwrepeat" v-model="passwordRepeat" data-validate-ref="#registration_password_input">
-                        <label for="txt_pwrepeat">{{ trans("Ceres::Template.accRepeatPassword") }}*</label>
+                    <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="ref">
+                        {% set uid_pwd = uid() %}
+                        <input type="password" name="password-repeat" id="{{ uid_pwd }}" v-model="passwordRepeat" data-validate-ref="#registration_password_input">
+                        <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.accRepeatPassword") }}*</label>
                     </div>
                 </div>
 
