--- a/resources/scss/ceres/plugins/_lightbox.scss
+++ b/resources/scss/ceres/plugins/_lightbox.scss
@@ -96,40 +96,16 @@ body.lb-disable-scrolling {
   display: block;
 }
 
-//.lb-nav a.lb-prev {
-//  width: 34%;
-//  left: 0;
-//  float: left;
-//  background: url(../images/prev.png) left 48% no-repeat;
-//  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-//  opacity: 0;
-//  -webkit-transition: opacity 0.6s;
-//  -moz-transition: opacity 0.6s;
-//  -o-transition: opacity 0.6s;
-//  transition: opacity 0.6s;
-//}
-
-.lb-nav a.lb-prev:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
+.lb-nav a.lb-prev {
+  width: 50%;
+  left: 0;
+  float: left;
 }
 
-//.lb-nav a.lb-next {
-//  width: 64%;
-//  right: 0;
-//  float: right;
-//  background: url(../images/next.png) right 48% no-repeat;
-//  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-//  opacity: 0;
-//  -webkit-transition: opacity 0.6s;
-//  -moz-transition: opacity 0.6s;
-//  -o-transition: opacity 0.6s;
-//  transition: opacity 0.6s;
-//}
-
-.lb-nav a.lb-next:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
+.lb-nav a.lb-next {
+  width: 50%;
+  right: 0;
+  float: right;
 }
 
 .lb-dataContainer {
@@ -186,9 +162,9 @@ body.lb-disable-scrolling {
 //  -o-transition: opacity 0.2s;
 //  transition: opacity 0.2s;
 //}
-
-.lb-data .lb-close:hover {
-  cursor: pointer;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
+//
+//.lb-data .lb-close:hover {
+//  cursor: pointer;
+//  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+//  opacity: 1;
+//}
