--- a/resources/views/ItemList/Components/Filter/ItemFilter.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilter.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-item-filter">
     <div v-if="facet.name" class="card">
-        <h3>${facet.name}</h3>
+        <div class="h3">${facet.name}</div>
         <div class="form-check" v-for="value in facets" :key="value.id">
             <input :id="'option-' + value.id" class="form-check-input hidden-xs-up" type="checkbox" :checked="isSelected(value.id)" @change="updateFacet(value)" :disabled="isLoading">
             <label :for="'option-' + value.id" class="form-check-label">
