- fix code from merge conflict - remove vue.js from OrderDetails.twig - add download link to AddItemToBasketOverlay.twig

--- a/resources/views/Basket/Components/AddItemToBasketOverlay.twig
+++ b/resources/views/Basket/Components/AddItemToBasketOverlay.twig
@@ -42,7 +42,12 @@
                                 <p class="small" v-for="property in latestBasketEntry.item.properties">
                                     <template v-if="property.property.value">
                                         <strong>${ property.property.names.name } (+ ${ latestBasketEntry.item.properties | propertySurcharge(property.property.id) | currency }):</strong>
-                                        <span v-if="property.property.valueType === 'file'">${ property.property.value | fileName }</span>
+                                        <span v-if="property.property.valueType === 'file'">
+                                            <a :href="property.property.value | fileUploadPath" target="_blank">
+                                                <i class="fa fa-external-link" aria-hidden="true"></i>
+                                                ${ property.property.value | fileName }
+                                            </a>
+                                        </span>
                                         <span v-else>${ property.property.value }</span>
                                     </template>
                                 </p>
