--- a/resources/views/Checkout/OrderDetails.twig
+++ b/resources/views/Checkout/OrderDetails.twig
@@ -158,13 +158,17 @@
                                     {% for property in item.orderProperties %}
                                         <div class="row">
                                             <strong class="col-xs-6 col-sm-3">{{ property.name }}</strong>
-                                            <span v-cloak class="col-xs-6 col-sm-9" v-if="'{{ property.value }}'.match(/^[0-9a-f]{8}\/[0-9a-f]{8}\//)">
-                                                <a :href="'{{ property.value }}' | fileUploadPath" target="_blank">
-                                                    <i class="fa fa-external-link" aria-hidden="true"></i>
-                                                    ${ "{{ property.value }}" | fileName }
-                                                </a>
-                                            </span>
-                                            <span class="col-xs-6 col-sm-9" v-else>{{ property.value }}</span>
+                                            {% if property.value matches '{^[0-9a-f]{8}\/[0-9a-f]{8}\/}' %}
+                                                <span class="col-xs-6 col-sm-9">
+                                                    <a href="order-property-file/{{ property.value }}?orderId={{ orderData.order.id }}" target="_blank">
+                                                        <i class="fa fa-external-link" aria-hidden="true"></i>
+                                                        {% set splitPath = property.value |split('/') %}
+                                                        {{ splitPath |last}}
+                                                    </a>
+                                                </span>
+                                            {% else %}
+                                                <span class="col-xs-6 col-sm-9">{{ property.value }}</span>
+                                            {% endif %}
                                         </div>
                                     {% endfor %}
                                 {% endif %}
