--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -136,10 +136,10 @@
         {% endif %}
         
         <shop-country-settings country-flag-prefix="flag-icon-" :localization-data="{{ services.localization.getLocalizationData() | json_encode }}">
-            <div id="countrySettings" class="cmp cmp-country-settings collapse">
-                <div class="country-settings-inner row">
+            <div id="countrySettings" class="row cmp cmp-country-settings no-margin collapse">
+                <div class="country-settings-inner languages row col-lg-6">
 
-                    <div class="language-settings col-xs-12 col-sm-6">
+                    <div class="language-settings">
                         <div class="list-title">
                             <strong>{{ trans("Ceres::Template.generalSelectLanguage") }}</strong>
                             <hr>
@@ -158,8 +158,9 @@
                             {% endfor %}
                         </ul>
                     </div>
-
-                    <div class="shipping-settings col-xs-12 col-sm-6">
+                </div>
+                <div class="country-settings-inner countries row col-lg-6">
+                    <div class="shipping-settings">
                         <div class="list-title">
                             <strong>{{ trans("Ceres::Template.generalSelectShippingCountry") }}</strong>
                             <hr>
