--- a/resources/scss/ceres/views/Confirmation/_confirmation-order-item.scss
+++ b/resources/scss/ceres/views/Confirmation/_confirmation-order-item.scss
@@ -84,6 +84,10 @@
 
 	.item-word-break {
 		word-wrap: break-word;
+
+		@include media-breakpoint-down(xs){
+			word-break: break-all;
+		}
 	}
 }
 
