code cleanup and fix body on language select expanded

--- a/resources/scss/ceres/common/_structure.scss
+++ b/resources/scss/ceres/common/_structure.scss
@@ -2,6 +2,12 @@ body {
 
 	background-color: $gray-lightest;
 
+	@include media-breakpoint-down(sm) {
+		&.position-fixed {
+			position: fixed;
+		}
+	}
+
 	> #vue-app,
 	> #vue-error {
 
