--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -67,7 +67,8 @@
             forwardToSingleItem: {{ config("Ceres.search.forwardToSingleItem") | default('false') }},
             activeCurrency: "{{ services.checkout.getCurrencyData()[currencyFormat] }}",
             currencyPattern: {{  services.checkout.getCurrencyPattern() | json_encode | raw }},
-            basketOpenClass: {% if config("Ceres.basket.preview_type") != "right" %}"open-hover"{% else %}"open-right"{% endif %}
+            basketOpenClass: {% if config("Ceres.basket.preview_type") != "right" %}"open-hover"{% else %}"open-right"{% endif %},
+            singleItemData: [{% for data in config("Ceres.item.data") | split(', ') %}"{{ data }}",{% endfor %}]
         },
         isCategoryView: {% if services.template.isCategory() == "1" %}true{% else %}false{% endif %},
         isCheckoutView : {% if services.template.isCheckout() == "1" %}true{% else %}false{% endif %},
