CHANGE _common.scss - add class text-gray-dark which sets color to $gray-dark

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -121,6 +121,10 @@ a:active {
     background-color: $white !important;
 }
 
+.text-gray-dark {
+    color: $gray-dark;
+}
+
 .cursor-pointer {
     cursor: pointer;
 }
