--- a/resources/views/Checkout/Components/Checkout.twig
+++ b/resources/views/Checkout/Components/Checkout.twig
@@ -1,6 +1,7 @@
 <script type="x/template" id="vue-checkout">
     <div>
-        <slot>
+        <slot showModal="showModal">
         </slot>
+
     </div>
 </script>
