--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -30,7 +30,7 @@
             </div>
 
             <checkout v-cloak template="#vue-checkout" :initial-checkout="{{ services.checkout.getCheckout() | json_encode() }}">
-                <div class="row">
+                <div class="row" slot-scope="checkoutComp">
                     <!-- ADDRESS SELECT -->
                     <div class="col-md-7">
                         <div class="col-xs-12 p-t-2 bg-white">
@@ -158,11 +158,18 @@
 
                         <div class="col-xs-12 p-b-1 bg-white">
                             {{ LayoutContainer.show("Ceres::Checkout.BeforePlaceOrder") }}
-                            <place-order template="#vue-place-order" target-continue="/place-order"></place-order>
+                            <place-order template="#vue-place-order" target-continue="/place-order" @payment-response="checkoutComp.showModal(content)"></place-order>
                             {{ LayoutContainer.show("Ceres::Checkout.AfterPlaceOrder") }}
                         </div>
                     </div>
 
+                    <div class="modal fade" ref="checkoutModal" data-backdrop="static" data-keyboard="false">
+                        <div class="modal-dialog modal-lg" role="document">
+                            <div class="modal-content">
+                                <div class="modal-body" ref="checkoutModalContent"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </checkout>
         {% else %}
