--- a/resources/views/Checkout/Components/Checkout.twig
+++ b/resources/views/Checkout/Components/Checkout.twig
@@ -1,7 +1,6 @@
 <script type="x/template" id="vue-checkout">
     <div>
-        <slot showModal="showModal">
+        <slot :showModal="showModal">
         </slot>
-
     </div>
 </script>
