CHANGE SingleItem.twig - the availability of an item is now hidden if no data is in the result

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -85,7 +85,7 @@
 
                     <slot name="AfterPrice"></slot>
 
-                    <span :class="'availability tag availability_' + currentVariation.variation.availability.id">
+                    <span v-if="currentVariation.variation.availability" :class="'availability tag availability_' + currentVariation.variation.availability.id">
                         <span>
                             ${ currentVariation.variation.availability.names.name }
                         </span>
