--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -22,11 +22,11 @@
                             </a>
     
                             <div class="item-base-price">
-                                ${ basketItem.variation.data.calculatedPrices.default.basePrice | currency }
+                                ${ basketItem.variation.data.prices.default.unitPrice.value | currency }
                             </div>
     
                             <div class="item-small-prices text-muted" v-if="!(basketItem.variation.data.unit.unitOfMeasurement === 'C62' && basketItem.variation.data.unit.content === 1) && basketItem.variation.data.variation.mayShowUnitPrice">
-                                <div>${ basketItem.variation.data.calculatedPrices.formatted.basePrice }</div>
+                                <div>${ basketItem.variation.data.prices.default.basePrice }</div>
                                 <div>
                                     <strong>{{ trans("Ceres::Template.itemContent") }}: </strong>
                                     ${ basketItem.variation.data.unit.content } ${ basketItem.variation.data.unit.names.name }
