fix reset password page

--- a/resources/views/Customer/Components/ResetPasswordForm.twig
+++ b/resources/views/Customer/Components/ResetPasswordForm.twig
@@ -2,16 +2,22 @@
 
 <script type="x/template" id="vue-reset-password-form">
     <div class="row m-b-3">
-        <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 m-b-2">
-            <div class="alert alert-info password-info">
-                <span class="info-badge">{{ trans("Ceres::Template.accPasswordReq") }}</span>
-            </div>
-        </div>
         <form :id="'reset-password-form-' + _uid" class="m-b-1">
             <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <span class="error-save-pwd-msg">{{ trans("Ceres::Template.accCheckPassword") }}</span>
                 <div class="input-unit" data-validate="password">
-                    <input type="password" name="password" id="txt_password_first" v-model="passwordFirst">
+                    <popper v-cloak trigger="focus" placement="bottom" ref="passwordHint">
+                        <input slot="handle" type="password" name="password" id="txt_password_first" v-model="passwordFirst">
+                        <div slot="title">
+                            {{ trans("Ceres::Template.accPasswordHintTitle") }}
+                        </div>
+                        <ul slot="content" class="p-l-1">
+                            <li>{{ trans("Ceres::Template.accPasswordHintLength") }}</li>
+                            <li>{{ trans("Ceres::Template.accPasswordHintDigit") }}</li>
+                            <li>{{ trans("Ceres::Template.accPasswordHintChar") }}</li>
+                        </ul>
+                    </popper>
+                    
                     <label for="txt_password_first">{{ trans("Ceres::Template.accNewPassword") }}*</label>
                 </div>
                 <span class="error-msg">{{ trans("Ceres::Template.accInvalidPassword") }}</span>
