--- a/resources/views/Customer/Components/ResetPasswordForm.twig
+++ b/resources/views/Customer/Components/ResetPasswordForm.twig
@@ -6,7 +6,7 @@
             <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <span class="error-save-pwd-msg">{{ trans("Ceres::Template.accCheckPassword") }}</span>
                 <div class="input-unit" data-validate="password">
-                    <popper v-cloak trigger="focus" placement="bottom" ref="passwordHint">
+                    <popper v-cloak trigger="focus" placement="right" ref="passwordHint">
                         <input slot="handle" type="password" name="password" id="txt_password_first" v-model="passwordFirst">
                         <div slot="title">
                             {{ trans("Ceres::Template.accPasswordHintTitle") }}
