CHANGE ContactForm - add "generalRequiredField" translation to the contact form

--- a/resources/views/Customer/Components/Contact/ContactForm.twig
+++ b/resources/views/Customer/Components/Contact/ContactForm.twig
@@ -77,6 +77,7 @@
 							<div class="error-feedback">{{ trans("Ceres::Template.contactEditMessage") }}</div>
 						</div>
 
+						<div class="col-xs-12 text-sm-right">* {{ trans("Ceres::Template.generalRequiredField") }}</div>
 					</form>
 				</div>
 
