--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -10,7 +10,7 @@
         <div class="basket-item component-loading with-icon sending" :class="{ 'isLoading': waiting }">
 
             <div class="image-container">
-                <img class="img-basket-small" v-if="image" :src="image.url" :alt="altText">
+                <img class="img-basket-small" v-if="image" :src="image" :alt="altText">
             </div>
 
             <div class="meta-container-wrapper">
