--- a/resources/views/Checkout/Components/Checkout.twig
+++ b/resources/views/Checkout/Components/Checkout.twig
@@ -2,5 +2,13 @@
     <div>
         <slot :showModal="showModal">
         </slot>
+
+        <div class="modal fade" ref="checkoutModal" data-backdrop="static" data-keyboard="false">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-body" ref="checkoutModalContent"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </script>
