ADD loading styles info

--- a/resources/scss/Ceres.scss
+++ b/resources/scss/Ceres.scss
@@ -46,6 +46,7 @@
 // Page Design / Global components
 @import "ceres/views/PageDesign/header";
 @import "ceres/views/PageDesign/search-box";
+@import "ceres/views/PageDesign/css-loading.scss";
 @import "ceres/views/PageDesign/language-select";
 @import "ceres/views/PageDesign/navigation";
 @import "ceres/views/PageDesign/breadcrumb";
