--- a/resources/views/Customer/Components/SalutationSelect.twig
+++ b/resources/views/Customer/Components/SalutationSelect.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-salutation-select">
     <select :value="addressData.addressSalutation" class="custom-select" @change="emitInputEvent(parseInt($event.target.value))">
-        <option :value="salutation.id" :selected="addressData.addressSalutation === salutation.id" v-for="(salutation, index) in currentSalutation">
+        <option :value="salutation.id" :selected="addressData.gender === mapSalutationIdToGender(salutation.id) && checkGenderCompany(salutation.id)" v-for="(salutation, index) in currentSalutation">
             ${ salutation.value }
         </option>
     </select>
