--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -55,7 +55,7 @@
                         </div>
     
                         <div class="price-box">
-                            <div class="item-total-price">${ basketItem.quantity * basketItem.variation.data.prices.default.unitPrice.value | currency(basketItem.variation.data.calculatedPrices.default.currency) }</div>
+                            <div class="item-total-price">${ itemTotalPrice | currency(basketItem.variation.data.calculatedPrices.default.currency) }</div>
                 
                             <div class="item-remove-container">
                                 <div class="btn btn-sm item-remove-button" :class="{ 'disabled': waiting || isBasketLoading || waitingForDelete }" @click="deleteItem">
