--- a/resources/views/Customer/Components/Registration.twig
+++ b/resources/views/Customer/Components/Registration.twig
@@ -13,7 +13,7 @@
 
                 <div class="col-sm-6" v-if="!guestMode">
                     <div class="input-unit" :class="{'no-bottom media-xs-d': modalElement}" data-validate="password" ref="passwordInput">
-                        <popper v-cloak trigger="focus" placement="bottom" ref="passwordHint">
+                        <popper v-cloak trigger="focus" placement="left" ref="passwordHint">
                             {% set uid_pwd = uid() %}
                             <input slot="handle" type="password" name="password" id="{{ uid_pwd }}" v-model="password">
                             <div slot="title">
