--- a/resources/views/Customer/Components/UserLoginHandler.twig
+++ b/resources/views/Customer/Components/UserLoginHandler.twig
@@ -7,7 +7,7 @@
             </a>
             <div class="account-menu dropdown-menu dropdown-menu-right small">
               <div class="list-group" aria-labelledby="accountMenuList" >
-                <a href="/my-account" class="list-group-item small"><i class="fa fa-user"></i> {{ trans("Ceres::Template.accMyAccount") }}</a>
+                <a href="{{ urls.myAccount }}" class="list-group-item small"><i class="fa fa-user"></i> {{ trans("Ceres::Template.accMyAccount") }}</a>
                 <a href="#" class="list-group-item small" v-logout><i class="fa fa-sign-out"></i> {{ trans("Ceres::Template.accLogout") }}</a>
               </div>
             </div>
