--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -113,17 +113,17 @@
         <div class="copyright text-xs-center m-y-1">
             <div class="static-link-list">
                 {% autoescape false %}
-                    <a href="/cancellation-rights">{{ trans("Ceres::Template.generalCancellationRight") }}</a>
+                    <a href="{{ urls.cancellationRights }}">{{ trans("Ceres::Template.generalCancellationRight") }}</a>
                     {% if config("Ceres.footer.cancellation_use_pdf") == "true" %}
                         <a href="{{ config('Ceres.footer.cancellation_pdf_path') }}" target="_blank">{{ trans("Ceres::Template.generalCancellationForm") }}</a>
                     {% else %}
-                        <a href="/cancellation-form">{{ trans("Ceres::Template.generalCancellationForm") }}</a>
+                        <a href="{{ urls.cancellationForm }}">{{ trans("Ceres::Template.generalCancellationForm") }}</a>
                     {% endif %}
-                    <a href="/legal-disclosure">{{ trans("Ceres::Template.generalLegalDisclosure") }}</a>
-                    <a href="/privacy-policy">{{ trans("Ceres::Template.generalPrivacyPolicy") }}</a>
-                    <a href="/gtc">{{ trans("Ceres::Template.generalGtc") }}</a>
+                    <a href="{{ urls.legalDisclosure }}">{{ trans("Ceres::Template.generalLegalDisclosure") }}</a>
+                    <a href="{{ urls.privacyPolicy }}">{{ trans("Ceres::Template.generalPrivacyPolicy") }}</a>
+                    <a href="{{ urls.gtc }}">{{ trans("Ceres::Template.generalGtc") }}</a>
                     {% if config("Ceres.contact.shop_mail") | length > 0 and config("Ceres.contact.shop_mail") != "your@email.com" %}
-                        <a href="/contact">{{ trans("Ceres::Template.generalContact") }}</a>
+                        <a href="{{ urls.contact }}">{{ trans("Ceres::Template.generalContact") }}</a>
                     {% endif %}
                 {% endautoescape %}
             </div>
