--- a/resources/views/Basket/Components/BasketPreviewHover.twig
+++ b/resources/views/Basket/Components/BasketPreviewHover.twig
@@ -31,7 +31,7 @@
 
                     <div class="row">
                             <div class="col-xs-6">
-                            <a v-waiting-animation-infinite href="/basket" class="btn btn-outline-primary btn-block basketBtn" title="{{ trans("Ceres::Template.basket") }}">
+                            <a v-waiting-animation-infinite href="{{ urls.basket }}" class="btn btn-outline-primary btn-block basketBtn" title="{{ trans("Ceres::Template.basket") }}">
                                 <i class="fa fa-shopping-cart"></i>
                                 {{ trans("Ceres::Template.basket") }} 
                             </a>
@@ -41,7 +41,7 @@
                             {{ LayoutContainer.show("Ceres::BasketPreview.BeforeCheckoutButton") }}
 
                             <div>
-                                <a v-waiting-animation-infinite href="/checkout" class="btn btn-primary btn-block checkOutBtn" title="{{ trans("Ceres::Template.orderCheckout") }}">
+                                <a v-waiting-animation-infinite href="{{ urls.checkout }}" class="btn btn-primary btn-block checkOutBtn" title="{{ trans("Ceres::Template.orderCheckout") }}">
                                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                                     {{ trans("Ceres::Template.orderCheckout") }}
                                 </a>
