--- a/resources/views/Checkout/Components/AcceptGtcCheck.twig
+++ b/resources/views/Checkout/Components/AcceptGtcCheck.twig
@@ -3,19 +3,19 @@
         <input class="form-check-input" type="checkbox" value="" id="gtc-accept" v-model="isChecked">
         {% autoescape false %}
             {% set gtcContent %}<!--
-                --><a href="/gtc" target="_blank">
+                --><a href="{{ urls.gtc }}" target="_blank">
                     <span>{{ trans("Ceres::Template.generalGtc") }}</span>
                 </a><!--
             -->{% endset %}
 
             {% set cancellationContent %}<!--
-                --><a href="/cancellation-rights" target="_blank">
+                --><a href="{{ urls.canellationRights }}" target="_blank">
                     <strong>{{ trans("Ceres::Template.generalCancellationRight") }}</strong>
                 </a><!--
             -->{% endset %}
 
             {% set policyContent %}<!--
-                --><a href="/privacy-policy" target="_blank">
+                --><a href="{{ urls.privacyPolicy }}" target="_blank">
                     <span>{{ trans("Ceres::Template.generalPrivacyPolicy") }}</span>
                 </a><!--
             -->{% endset %}
