--- a/resources/views/OrderReturn/OrderReturnConfirmation.twig
+++ b/resources/views/OrderReturn/OrderReturnConfirmation.twig
@@ -24,7 +24,7 @@
 
         {% if loggedIn %}
             <div class="col-xs-6 col-md-4">
-                <a href="/my-account" type="" class="btn btn-primary btn-block bg-primary">{{ trans("Ceres::Template.accMyAccount") }}</a>
+                <a href="{{ urls.myAccount }}" type="" class="btn btn-primary btn-block bg-primary">{{ trans("Ceres::Template.accMyAccount") }}</a>
             </div>
         {% endif %}
     </div>
