--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -151,10 +151,14 @@
 
                                 {% set languageList = services.webstoreConfig.getActiveLanguageList() %}
                                 {% set languageUrls = services.url.getLanguageURLs() %}
+                                {% set trailingSlash = "" %}
+                                {% if config('urlTrailingSlash') == 1 %}
+                                    {% set trailingSlash = "/" %}
+                                {% endif %}
                                 <ul>
                                     {% for language in languageList %}
                                         <li{% if lang == language %} class="active"{% endif %}>
-                                            <a href="{% if languageUrls[language] is defined %}{{ languageUrls[language] ~ queryString() }}{% else %}/{{ language }}{% endif %}" data-update-url>
+                                            <a href="{% if languageUrls[language] is defined %}{{ languageUrls[language] ~ queryString() }}{% else %}/{{ language }}{% endif %}{{ trailingSlash }}" data-update-url>
                                                 <i class="flag-icon flag-icon-{{ language }}"></i>
                                                 {{ trans("Ceres::Template." ~ language) }}
                                             </a>
