Make images in item description responsive by default

--- a/resources/scss/ceres/views/Item/_single-item.scss
+++ b/resources/scss/ceres/views/Item/_single-item.scss
@@ -76,6 +76,12 @@
         }
     }
 
+    .tab-content {
+        img {
+            max-width: 100%;
+        }
+    }
+
     .graduated-prices-table {
         td:first-child {
             padding-right: 1rem;
