get correct currency to display in the price component

--- a/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
@@ -2,12 +2,12 @@
 	<div>
 		<div class="row">
 			<div class="col-lg-5 p-r-0 d-table">
-				<div class="input-group-addon">EUR</div>
+				<div class="input-group-addon">${ currency }</div>
 				<input type="number" class="form-control" placeholder="Min" v-model="minPrice">
 			</div>
 
 			<div class="col-lg-5 p-r-0 d-table">
-				<div class="input-group-addon">EUR</div>
+				<div class="input-group-addon">${ currency }</div>
 				<input type="number" class="form-control" placeholder="Max" v-model="maxPrice">
 			</div>
 
