--- a/resources/views/ItemList/Components/Filter/ItemFilter.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilter.twig
@@ -1,7 +1,7 @@
 <script type="x/template" id="vue-item-filter">
     <div v-if="facet.name" class="card">
         <div class="h3">${facet.name}</div>
-        <div v-if="false">
+        <div v-if="facet.type != 'price'">
             <div class="form-check" v-for="value in facets" :key="value.id">
                 <input :id="'option-' + value.id" class="form-check-input hidden-xs-up" type="checkbox" :checked="isSelected(value.id)" @change="updateFacet(value)" :disabled="isLoading">
                 <label :for="'option-' + value.id" class="form-check-label">
