--- a/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
@@ -12,7 +12,8 @@
 			</div>
 
 			<div class="col-lg-2">
-				<button type="button" class="btn btn-primary" :disabled="isDisabled">
+				<button type="button" class="btn btn-primary" :class="{'disabled': isDisabled}" v-tooltip 
+						data-toggle="tooltip" data-placement="top" @click="triggerFilter()" title="Übernehmen">
 				 	<i class="fa fa-check" aria-hidden="true"></i>
 				</button>
 			</div>
